# build-RAG

./: .gitignore  README.md  pyproject.toml  rag_from_scratch_1_to_4.ipynb
dot-secrets/: README.md  dot-env.toml
src/: Indexing-tutorial.ipynb  Indexing.ipynb  rag_from_scratch_1_to_4.ipynb  rag_part_0.1_doc_indexing.ipynb  rag_part_1.ipynb  rag_part_1_base_implementation.ipynb  rag_part_2.ipynb
src/modules/: llm_eval.py  utils.py
