[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["AFirooz <ali.emad649@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-community = "^0.3.8"
tiktoken = "^0.8.0"
langchain-openai = "^0.2.10"
langchainhub = "^0.1.21"
chromadb = "^0.5.20"
langchain = "^0.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
