[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["AFirooz <ali.emad649@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
langchain-community = "^0.3.8"
tiktoken = "^0.8.0"
langchain-openai = "^0.2.10"
langchainhub = "^0.1.21"
chromadb = "^0.5.20"
langchain = "^0.3.8"
python-dotenv = "^1.0.1"
ipython = "^8.29.0"
ipykernel = "^6.29.5"
notebook = "^7.2.2"
pypdf = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
